--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h1>David E Rodriguez</h1>
-    <img src="./assets/screaming_goat.png" height="100" alt="Screaming Goat" />
+    <img src="./screaming_goat.png" height="100" alt="Screaming Goat" />
     <h2>Summary</h2>
     <p>
         Talented, energetic and skilled individual with excellent work ethic, analytical skills and knowledge to troubleshoot and repair network systems. Effective and self-motivated professional with extensive experience in providing customer service upholding high integrity and quality standards. Passionate about the business success and eager to take on new or additional responsibilities.
     </p>
+    <hr/>
     <h2>Education</h2>
     <p>
         University of Texas at Arlington - Arlington, Texas<br/>
@@ -25,6 +26,7 @@
         Some training in Amazon Web Services Certified Solutions Architect <br/>
         Check Point Certified Security Administrator<br/>
     </p>
+    <hr/>
     <h2> Work Experience</h2>
     <h4>FireMon LLC                                                    2021 - Present</h4>
     <h5>Professional Services Engineer</h5>
@@ -68,8 +70,9 @@
         <li>Administered devices’ troubleshooting connectivity issues </li>
     </ul>
     <hr/>
-    <a href="./assets/Contactme.html">Contact Me</a>
+    <a href="./assets/Contactme.html">Contact Me</a><br/>
     <a href="./assets/Hobbies.html">Hobbies</a>
+    <hr/>
     <footer>
         Copywrite 2024.  All rights reserved.
     </footer>
